--- a/createAccount.html
+++ b/createAccount.html
@@ -50,12 +50,15 @@
 </head>
 <body>
 <div class="container">
-  <div id="welcomeStatement">
-    <h1>Diagnostic Test</h1>
+
+  <!-- Diagnostic Quiz -->
+  <div id="welcomeStatement" style="display: block;">
+    <h1>Create Account -- Diagnostic Test</h1>
     <p>Welcome to the diagnostic test. Please rate your agreement with each statement.</p>
   </div>
 
   <button id="startButton">Start</button>
+  
   <div id="questions" style="display: none;">
     <h2 id="question">Statement</h2>
     <input type="range" id="slider" min="1" max="5" value="3" step="1">
@@ -96,8 +99,10 @@
 </form>
 
 </div>
+
 <script>
-  const startButton = document.getElementById("startButton");
+  console.log("asdf");
+  const startButton = document.getElementById("startButton"); 
   const questionsDiv = document.getElementById("questions");
   const resultsDiv = document.getElementById("results");
   const questionText = document.getElementById("question");
@@ -143,7 +148,10 @@
   let ratings = [];
   let ratings_flat_num = [];
   let runningTotal = 0;
+
+
   startButton.addEventListener("click", function() {
+    console.log("helllpooooo!")
     startButton.style.display = "none";
     questionsDiv.style.display = "block";
     nextButton.style.display = "block"; // Show the Next button
@@ -214,31 +222,42 @@
     userInfo.phone = document.getElementById("phone").value;
     userInfo.zip_code = document.getElementById("zip_code").value;
     userInfo.password = document.getElementById("password").value;
+    console.log(runningTotal);
+    console.log(runningTotal/9);
     userInfo.overall_political_view = Math.round(100 * runningTotal/9) / 100;
     var MergedList = Object.assign({}, userInfo, ratings_flat_num);
     console.log(userInfo);
     console.log(MergedList);
+
     // For demonstration purposes, hide the form after submission
-    userForm.style.display = "none";
     
-    // You can add code to send the user's information to the server here
-    fetch("database.php", {
+    userForm.style.display = "none";
+    bodyReq = JSON.stringify(MergedList);
+    console.log(bodyReq);
+    reqJson = {
       method: "POST",
+      body: bodyReq,
       headers: {
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify(MergedList),
-    })
+        "Content-Type": "application/json"
+      }
+    }
+    // You can add code to send the user's information to the server here
+    fetch("/submit", req=reqJson)
       .then((response) => {
         if (response.ok) {
           // Data sent successfully
           console.log("Data sent successfully");
+          window.location.href = "http://localhost:8080/home?email=" + encodeURIComponent(userInfo.email);
           // You can add further actions here if needed, like redirecting to a thank you page.
         } else {
           // Error handling
           console.error("Error sending data");
         }
       })
+      .then((data) => {
+        // Access the 'message' property inside the JSON object
+      })
+      
       .catch((error) => {
         console.error("Error:", error);
       });
